--- a/package.json
+++ b/package.json
@@ -21,21 +21,15 @@
     "build/*"
   ],
   "scripts": {
-    "build": "rm -rf build && tsc --project .",
-    "buildWatch": "rm -rf build && tsc --watch --project .",
-    "fullBuild": "npm run lintNoFix && npm run build && npm run test && generateDocs",
-    "generateDocs": "typedoc --name xrp-batch-payout --out ./docs ./src",
-    "lint": "eslint . --ext .ts --fix --max-warnings 0 && prettier --write '**/*.{md,json}'",
-    "lintNoFix": "eslint . --ext .ts --max-warnings 0 && prettier --check '**/*.{md,json}'",
-    "lintWatch": "chokidar src/**/*.ts -c \"npm run lint\" --initial --verbose",
-    "test": "nyc mocha 'test/**/*.test.ts'",
-    "testWatch": "nyc mocha --watch 'test/**/*.test.ts'"
+    "build": "tsc --project .",
+    "buildWatch": "rm -rf build && tsc --watch --project ."
   },
   "dependencies": {
     "chalk": "^4.1.0",
+    "chokidar": "^3.5.2",
     "commander": "^6.2.0",
+    "https-proxy-agent": "^5.0.0",
     "papaparse": "^5.3.0",
-    "prompts": "^2.3.2",
     "tslog": "^3.1.0",
     "xpring-common-js": "^6.2.2",
     "xpring-js": "^5.4.0-beta.0",
@@ -43,36 +37,18 @@
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
-    "@fintechstudios/eslint-plugin-chai-as-promised": "^3.0.2",
-    "@types/chai": "^4.2.14",
+    "@types/chai": "^4.2.19",
     "@types/google-protobuf": "^3.7.3",
-    "@types/mocha": "^8.0.3",
     "@types/node": "^14.14.22",
     "@types/node-fetch": "^2.5.8",
     "@types/papaparse": "^5.2.5",
-    "@types/prompts": "^2.0.9",
-    "@typescript-eslint/eslint-plugin": "^3.7.1",
-    "@typescript-eslint/parser": "^3.7.1",
-    "@xpring-eng/eslint-config-base": "^0.11.0",
-    "@xpring-eng/eslint-config-mocha": "^1.0.0",
     "chai": "^4.2.0",
     "chokidar-cli": "^2.1.0",
-    "eslint": "^7.18.0",
-    "eslint-plugin-array-func": "^3.1.6",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsdoc": "^31.3.3",
-    "eslint-plugin-mocha": "^7.0.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-tsdoc": "^0.2.11",
-    "mocha": "^8.2.1",
     "node-fetch": "^2.6.1",
     "nyc": "^15.1.0",
-    "prettier": "^2.0.5",
     "ts-node": "^9.0.0",
     "typedoc": "^0.19.2",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.10"
   },
   "engines": {
     "node": ">=12.0.0",
